--- a/index.html
+++ b/index.html
@@ -7,8 +7,18 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <div></div>
-    <div></div>
+	<div class = 'back-img'></div>
+	<h1 class = 'header'>Blog Français</h1>
+	<div class = 'post'>
+		<h1 class = 'title'>La premiere article</h1>
+		<h3 class = 'date'>15/1/22</h3>
+		<p class = 'content'>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit molestie velit scelerisque volutpat. Curabitur tortor diam, luctus hendrerit libero sed, molestie ullamcorper quam. Mauris venenatis, neque id semper dictum, lacus lorem bibendum tellus, vel condimentum leo eros at nunc. Duis eu euismod odio. Aenean at egestas velit. Fusce dictum, lectus sed placerat condimentum, metus quam vulputate enim, at mattis diam sapien et metus. Sed elit diam, congue nec arcu in, fermentum rutrum lacus.</p>
+	</div>
+    <div class = 'post'>
+		<h1 class = 'title'>La premiere article</h1>
+		<h3 class = 'date'>15/1/22</h3>
+		<p class = 'content'>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit molestie velit scelerisque volutpat. Curabitur tortor diam, luctus hendrerit libero sed, molestie ullamcorper quam. Mauris venenatis, neque id semper dictum, lacus lorem bibendum tellus, vel condimentum leo eros at nunc. Duis eu euismod odio. Aenean at egestas velit. Fusce dictum, lectus sed placerat condimentum, metus quam vulputate enim, at mattis diam sapien et metus. Sed elit diam, congue nec arcu in, fermentum rutrum lacus.</p>
+	</div>
     <script src="script.js"></script>
   </body>
 </html>
