--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>French blog</title>
+    <title>Blog - kelseyb</title>
     <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/512/811/811868.png">
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
